feat(upload): 优化上传界面及增加交易对手选择组件
- 新增交易对手选择组件CounterPartySelector，支持搜索、选择及确认操作
- 改进上传账单组件UploadView，增加渠道列表及账户类型展示，优化文件选择逻辑
- 上传文件支持按渠道及解析器过滤，增强文件类型判断
- 解析结果预览支持多文件标签切换及文件舍弃功能
- ImportRecordList调整导入记录展示，增加账户名显示及样式修正
- 删除冗余channels配置文件，改由接口动态获取渠道数据
- Import类型定义扩展账户信息字段，适配新增渠道及账户详情
- 统一使用工具函数getEnumText获取枚举文本，提升显示一致性和代码复用性