@@ -17,6 +17,7 @@ import java.util.stream.Collectors;
 
 import cn.chenyunlong.qing.service.llm.entity.Account;
 import cn.chenyunlong.qing.service.llm.repository.AccountRepository;
+
 import java.time.YearMonth;
 import java.time.temporal.ChronoUnit;
 
@@ -27,7 +28,7 @@ public class DashboardController {
 
     @Autowired
     private TransactionRecordRepository transactionRepo;
-    
+
     @Autowired
     private AccountRepository accountRepo;
 
@@ -37,7 +38,7 @@ public class DashboardController {
         List<Account> activeAccounts = accountRepo.findAll().stream()
                 .filter(a -> "ACTIVE".equals(a.getStatus()))
                 .collect(Collectors.toList());
-        
+
         BigDecimal totalAssets = BigDecimal.ZERO;
         for (Account acc : activeAccounts) {
             if (acc.getCurrentBalance() != null) {
@@ -52,13 +53,13 @@ public class DashboardController {
         List<TransactionRecord> allRecords = transactionRepo.findAll()
                 .stream().filter(r -> !r.getIsDeleted() && (r.getIsImported() == null || r.getIsImported()))
                 .filter(r -> r.getTransactionTime() != null && r.getTransactionTime().toLocalDate().isAfter(thirtyDaysAgo.minusDays(1)))
-                .collect(Collectors.toList());
+                .toList();
 
         BigDecimal monthlyIncome = BigDecimal.ZERO;
         BigDecimal monthlyExpense = BigDecimal.ZERO;
-        
+
         Map<String, DailyTrend> trendMap = new TreeMap<>(); // 按日期排序
-        
+
         // 预先填充近 30 天的日期，确保图表没有断层
         for (int i = 0; i <= 30; i++) {
             String d = thirtyDaysAgo.plusDays(i).toString();
@@ -69,30 +70,30 @@ public class DashboardController {
 
         for (TransactionRecord r : allRecords) {
             if (r.getAmount() == null) continue;
-            
+
             LocalDate txDate = r.getTransactionTime().toLocalDate();
             String dateKey = txDate.toString();
             DailyTrend trend = trendMap.get(dateKey);
-            
+
             boolean isCurrentMonth = YearMonth.from(txDate).equals(currentMonth);
 
-            if ("INCOME".equals(r.getType())) {
-                if (trend != null) {
-                    trend.setIncome(trend.getIncome().add(r.getAmount()));
-                }
-                if (isCurrentMonth) {
-                    monthlyIncome = monthlyIncome.add(r.getAmount());
-                }
-            } else if ("EXPENSE".equals(r.getType())) {
-                if (trend != null) {
-                    trend.setExpense(trend.getExpense().add(r.getAmount()));
-                }
-                if (isCurrentMonth) {
-                    monthlyExpense = monthlyExpense.add(r.getAmount());
-                    String cat = r.getCategory() != null && !r.getCategory().isEmpty() ? r.getCategory() : "未分类";
-                    categoryStructure.put(cat, categoryStructure.getOrDefault(cat, BigDecimal.ZERO).add(r.getAmount()));
-                }
-            }
+            //            if ("INCOME".equals(r.getType())) {
+            //                if (trend != null) {
+            //                    trend.setIncome(trend.getIncome().add(r.getAmount()));
+            //                }
+            //                if (isCurrentMonth) {
+            //                    monthlyIncome = monthlyIncome.add(r.getAmount());
+            //                }
+            //            } else if ("EXPENSE".equals(r.getType())) {
+            //                if (trend != null) {
+            //                    trend.setExpense(trend.getExpense().add(r.getAmount()));
+            //                }
+            //                if (isCurrentMonth) {
+            //                    monthlyExpense = monthlyExpense.add(r.getAmount());
+            //                    String cat = r.getCategory() != null && !r.getCategory().isEmpty() ? r.getCategory() : "未分类";
+            //                    categoryStructure.put(cat, categoryStructure.getOrDefault(cat, BigDecimal.ZERO).add(r.getAmount()));
+            //                }
+            //            }
         }
 
         List<CategoryStat> categoryList = categoryStructure.entrySet().stream()
@@ -128,20 +129,20 @@ public class DashboardController {
         private String date;
         private BigDecimal income;
         private BigDecimal expense;
-        
+
         public DailyTrend(String date, BigDecimal income, BigDecimal expense) {
             this.date = date;
             this.income = income;
             this.expense = expense;
         }
     }
-    
+
     @Data
     public static class CategoryStat {
         private String name;
         private BigDecimal value; // Recharts pie chart defaults to 'name' and 'value' fields
         private BigDecimal amount;
-        
+
         public CategoryStat(String name, BigDecimal amount) {
             this.name = name;
             this.value = amount;
